# liferuntime

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.claude/agents/: afk-runner.md
.claude/skills/liferuntime/: SKILL.md
.github/workflows/: ci.yml
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
crates/agent-bridge/: Cargo.toml
crates/agent-bridge/src/: fake.rs  lib.rs  proposed_event.rs  provider.rs
crates/event-log/: Cargo.toml
crates/event-log/src/: jsonl.rs  lib.rs  memory.rs  store.rs
crates/world/: Cargo.toml
crates/world/src/: errors.rs  events.rs  explanation.rs  lib.rs  model.rs  queries.rs  runtime.rs  systems.rs
docs/: CONTEXT.md  CONTINUITY.md  LANGUAGE.md
docs/adr/: 0001-cli-first-local-runtime.md  0002-advance-is-a-reporter-not-a-trigger.md  0003-event-log-is-inputs-only.md  0004-event-log-time-not-wall-clock.md  0005-storage-roadmap-and-compat-contract.md  0006-per-event-scheduling.md  0007-dir-level-flock-for-concurrent-cli.md  0008-decision-as-first-class.md  0009-factual-world-boundary.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
examples/: events.jsonl  personal-world.toml
