[workspace]
resolver = "2"
members = [
    "apps/cli",
    "crates/world",
    "crates/event-log",
    "crates/agent-bridge",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.89"
license = "MIT OR Apache-2.0"
authors = ["LifeRuntime contributors"]

[workspace.dependencies]
bevy_ecs = { version = "0.18.1", default-features = false, features = ["std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde", "clock"] }
clap = { version = "4", features = ["derive"] }
ulid = { version = "1", features = ["serde"] }

liferuntime-world = { path = "crates/world" }
liferuntime-event-log = { path = "crates/event-log" }
liferuntime-agent-bridge = { path = "crates/agent-bridge" }

[profile.release]
lto = "thin"
codegen-units = 1
