[package]
name = "liferuntime-event-log"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Append-only event log for the LifeRuntime world."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
ulid = { workspace = true }
